--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -1,4 +1,5 @@
 MetaUnivers: MetaUnivers
+Recherche avancé : advanced search
 Bienvenue: welcome
 Publier un article: Publish an article 
 Connexion: Login
@@ -11,7 +12,7 @@ S identifier: identify
 inscription: registration 
 inscrire: register
 Ajouter une annonce: add ad
-Enregister: save
+Enregistrer: save
 Lire la suite: read more 
 Secteur: Sector 
 ID: identifier
@@ -21,3 +22,32 @@ Dashboard: Dashboard
 Cryptomannaie: cryptocurrencies
 Users: Users
 Password: Password
+Avertissement : Avertissement
+Vous êtes en train de supprimer l annonce suivante suivant : You are deleting the following ad
+Tilte : Title
+Contente : contente 
+Date de publication : Publication date
+Supprimer : delete 
+retourner  confirmation( Êtes vous sûr ) : return confirmation( Are you sure ) 
+Annuler: to cancel
+Ecrit le : write  the 
+à : the 
+dans la catégorie : in  the category
+Modifier: Modified
+commentaires: comments
+Commenter: comment
+connectez vous pour commenter : log in to comment 
+connexion : connexion
+Prix : Price
+Bienvenue au monde des métaverse! : Welcome to the world of metaverse!
+Pour les cryptomonnaies, 2021 aura été l année de tous les records. Avec un volume d échanges de plus de 14 000 milliards de dollars contre 1800 milliards en 2020, mais aussi 30 milliards investis par les fonds de capital-risque du monde entier (quatre fois plus qu’en 2018), les actifs numériques sortent renforcés. L année dernière a notamment été marquée par la folie des NFT et l’engouement de géants américains et asiatiques pour le metaverse, présenté comme le “futur de l’Internet”.En 2022, le bitcoin pourrait également surpasser le S&P 500, selon un rapport d’Arcane Research qui remarque que cette crypto a enregistré une hausse de 73 % en 2021, contre 28 % pour le S&P 500. Une suite logique pour le marché des cryptomonnaies qui a brièvement dépassé les 3000 milliards de dollars de valorisation l’an passé.Mais au-delà de l’augmentation de la valeur des cryptomonnaies, quel sera l’impact du metaverse et du Web3 sur le secteur ? Que vont changer les monnaies numériques nationales ? Quel avenir pour la cryptomonnaie de Facebook ? Autant de questions que nous avons posées à Grégory Raymond, journaliste chez Capital spécialisé dans les cryptoactifs et la blockchain, créateur de la newsletter 21 Millions qui suit l’actualité des cryptomonnaies. : For cryptocurrencies, 2021 will have been the year of all records. With a trading volume of more than 14,000 billion dollars against 1,800 billion in 2020, but also 30 billion invested by venture capital funds around the world (four times more than in 2018), digital assets are emerging stronger. Last year was notably marked by the madness of NFTs and the enthusiasm of American and Asian giants for the metaverse, presented as the “future of the Internet”. In 2022, bitcoin could also surpass the S&P 500, according to a report by Arcane Research which notes that this crypto recorded a rise of 73% in 2021, compared to 28% for the S&P 500. A logical continuation for the cryptocurrency market which briefly exceeded $3 trillion in valuation last year. But beyond the increase in the value of cryptocurrencies, what will be the impact of the metaverse and Web3 on the sector? What will national digital currencies change? What future for Facebook's cryptocurrency? So many questions we asked Grégory Raymond, journalist at Capital specializing in cryptoassets and blockchain, creator of the 21 Million newsletter which follows cryptocurrency news.
+Contenus : content 
+Ã : the
+Register : Register
+You are logged in as : You are logged in as
+Deconnexion : logout 
+Recherche avancée : advanced research 
+Résultat de la recherche : Result of the research
+recherche : reaserch 
+Mes commentaires : My comments
+suivant : next
