--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -1,4 +1,6 @@
-MetaUnivers: UniversDesmetvereses 
+MetaUnivers: MetaUnivers
+Recherche avancé : Recherche avancé
+Recherche avancée : Recherche avancée
 Bienvenue: Bienvenue
 Publier un article: Publier un article
 Connexion: Connexion
@@ -11,7 +13,7 @@ S identifier: S'identifier
 inscription: inscription
 inscrire: s'inscrire 
 Ajouter une annonce: Ajouter une annonce
-Enregister: Enregistrer 
+Enregistrer: Enregistrer 
 Lire la suite: lire la suite 
 Secteur: Secteur  
 ID: identifiant
@@ -20,5 +22,31 @@ Description: Description
 Dashboard: Tableau de Bord 
 Cryptomonnaie: Crypto Monnaie
 Users: Utilisateur
-Prix: Price
+Prix: Prix
 Password: Mot de passe
+Avertissement !: Avertissement! 
+Vous êtes en train de supprimer l annonce suivante suivant : Vous êtes en train de supprimer l annonce suivante suivant 
+Tilte : Titre 
+Contente : contenu 
+Date de publication : Date de publication 
+Supprimer: Supprimer
+retourner  confirmation( Êtes vous sûr ): retourner  confirmation( Êtes vous sûr )
+Annuler: Annuler
+à: à
+dans la catégorie: dans la catégorie
+Modifier: Modifier 
+commentaires: commentaires 
+Commenter: commenter
+connectez vous pour commenter : connectez vous pour commenter 
+connexion : connexion
+Bienvenue au monde des métaverse! : Bienvenue au monde des métaverse!
+Ecrit le : Ecrit le
+Contenus : Contenus
+Ã : Ã 
+Register :  inscrire 
+You are logged in as : vous etes connecté autant que 
+Deconnexion : Deconnexion
+Résultat de la recherche : Résultat de la recherche
+recherche : recherche
+Mes commentaires : Mes commentaires
+suivant : suivant 
